Compiladores/Meta3/gocompiler_245/y.output
Terminals which are not used

   RESERVED


Grammar

    0 $accept: program $end

    1 program: PACKAGE IDENTIFIER SEMICOLON declarations

    2 declarations: declarations vardeclaration SEMICOLON
    3             | declarations funcdeclaration SEMICOLON
    4             | /* empty */

    5 vardeclaration: VAR varspec
    6               | VAR LPAR varspec SEMICOLON RPAR

    7 varspec: IDENTIFIER varspec2 type

    8 varspec2: varspec2 COMMA IDENTIFIER
    9         | /* empty */

   10 type: INT
   11     | FLOAT32
   12     | BOOL
   13     | STRING

   14 funcdeclaration: FUNC IDENTIFIER LPAR parameters RPAR type funcbody
   15                | FUNC IDENTIFIER LPAR parameters RPAR funcbody

   16 parameters: IDENTIFIER type parameters2
   17           | /* empty */

   18 parameters2: parameters2 COMMA IDENTIFIER type
   19            | /* empty */

   20 funcbody: LBRACE varsandstatements RBRACE

   21 varsandstatements: varsandstatements SEMICOLON
   22                  | varsandstatements vardeclaration SEMICOLON
   23                  | varsandstatements statement SEMICOLON
   24                  | /* empty */

   25 statement: IDENTIFIER ASSIGN expr
   26          | LBRACE statement2 RBRACE
   27          | IF expr LBRACE statement2 RBRACE ELSE LBRACE statement2 RBRACE
   28          | IF expr LBRACE statement2 RBRACE
   29          | FOR expr LBRACE statement2 RBRACE
   30          | FOR LBRACE statement2 RBRACE
   31          | RETURN expr
   32          | RETURN
   33          | funcinvocation
   34          | parseargs
   35          | PRINT LPAR expr RPAR
   36          | PRINT LPAR STRLIT RPAR
   37          | error

   38 statement2: statement2 statement SEMICOLON
   39           | /* empty */

   40 parseargs: IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ expr RSQ RPAR
   41          | IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR

   42 funcinvocation: IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | IDENTIFIER LPAR RPAR
   44               | IDENTIFIER LPAR error RPAR

   45 funcinvocation2: funcinvocation2 COMMA expr
   46                | /* empty */

   47 expr: expr OR expr
   48     | expr AND expr
   49     | expr LT expr
   50     | expr GT expr
   51     | expr EQ expr
   52     | expr NE expr
   53     | expr LE expr
   54     | expr GE expr
   55     | expr PLUS expr
   56     | expr MINUS expr
   57     | expr STAR expr
   58     | expr DIV expr
   59     | expr MOD expr
   60     | NOT expr
   61     | MINUS expr
   62     | PLUS expr
   63     | NATURAL
   64     | DECIMAL
   65     | IDENTIFIER
   66     | funcinvocation
   67     | LPAR expr RPAR
   68     | LPAR error RPAR


Terminals, with rules where they appear

$end (0) 0
error (256) 37 41 44 68
SEMICOLON (258) 1 2 3 6 21 22 23 38
COMMA (259) 8 18 40 41 45
BLANKID (260) 40 41
ASSIGN (261) 25 40 41
STAR (262) 57
DIV (263) 58
MINUS (264) 56 61
PLUS (265) 55 62
EQ (266) 51
GE (267) 54
GT (268) 50
LBRACE (269) 20 26 27 28 29 30
LE (270) 53
LPAR (271) 6 14 15 35 36 40 41 42 43 44 67 68
LSQ (272) 40
LT (273) 49
MOD (274) 59
NE (275) 52
NOT (276) 60
AND (277) 48
OR (278) 47
RBRACE (279) 20 26 27 28 29 30
RPAR (280) 6 14 15 35 36 40 41 42 43 44 67 68
RSQ (281) 40
PACKAGE (282) 1
RETURN (283) 31 32
ELSE (284) 27
FOR (285) 29 30
IF (286) 27 28
VAR (287) 5 6
INT (288) 10
FLOAT32 (289) 11
BOOL (290) 12
STRING (291) 13
PRINT (292) 35 36
PARSEINT (293) 40 41
FUNC (294) 14 15
CMDARGS (295) 40
RESERVED (296)
IDENTIFIER (297) 1 7 8 14 15 16 18 25 40 41 42 43 44 65
NATURAL (298) 63
DECIMAL (299) 64
STRLIT (300) 36
PLUS_SOZINHO (301)
MINUS_SOZINHO (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
declarations (50)
    on left: 2 3 4, on right: 1 2 3
vardeclaration (51)
    on left: 5 6, on right: 2 22
varspec (52)
    on left: 7, on right: 5 6
varspec2 (53)
    on left: 8 9, on right: 7 8
type (54)
    on left: 10 11 12 13, on right: 7 14 16 18
funcdeclaration (55)
    on left: 14 15, on right: 3
parameters (56)
    on left: 16 17, on right: 14 15
parameters2 (57)
    on left: 18 19, on right: 16 18
funcbody (58)
    on left: 20, on right: 14 15
varsandstatements (59)
    on left: 21 22 23 24, on right: 20 21 22 23
statement (60)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37,
    on right: 23 38
statement2 (61)
    on left: 38 39, on right: 26 27 28 29 30 38
parseargs (62)
    on left: 40 41, on right: 34
funcinvocation (63)
    on left: 42 43 44, on right: 33 66
funcinvocation2 (64)
    on left: 45 46, on right: 42 45
expr (65)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68, on right: 25 27 28 29 31 35 40 42 45 47 48 49 50 51
    52 53 54 55 56 57 58 59 60 61 62 67


state 0

    0 $accept: . program $end
    1 program: . PACKAGE IDENTIFIER SEMICOLON declarations

    PACKAGE  shift, and go to state 1

    program  go to state 2


state 1

    1 program: PACKAGE . IDENTIFIER SEMICOLON declarations

    IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: PACKAGE IDENTIFIER . SEMICOLON declarations

    SEMICOLON  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: PACKAGE IDENTIFIER SEMICOLON . declarations
    2 declarations: . declarations vardeclaration SEMICOLON
    3             | . declarations funcdeclaration SEMICOLON
    4             | .

    $default  reduce using rule 4 (declarations)

    declarations  go to state 6


state 6

    1 program: PACKAGE IDENTIFIER SEMICOLON declarations .  [$end]
    2 declarations: declarations . vardeclaration SEMICOLON
    3             | declarations . funcdeclaration SEMICOLON
    5 vardeclaration: . VAR varspec
    6               | . VAR LPAR varspec SEMICOLON RPAR
   14 funcdeclaration: . FUNC IDENTIFIER LPAR parameters RPAR type funcbody
   15                | . FUNC IDENTIFIER LPAR parameters RPAR funcbody

    VAR   shift, and go to state 7
    FUNC  shift, and go to state 8

    $default  reduce using rule 1 (program)

    vardeclaration   go to state 9
    funcdeclaration  go to state 10


state 7

    5 vardeclaration: VAR . varspec
    6               | VAR . LPAR varspec SEMICOLON RPAR
    7 varspec: . IDENTIFIER varspec2 type

    LPAR        shift, and go to state 11
    IDENTIFIER  shift, and go to state 12

    varspec  go to state 13


state 8

   14 funcdeclaration: FUNC . IDENTIFIER LPAR parameters RPAR type funcbody
   15                | FUNC . IDENTIFIER LPAR parameters RPAR funcbody

    IDENTIFIER  shift, and go to state 14


state 9

    2 declarations: declarations vardeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 15


state 10

    3 declarations: declarations funcdeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 16


state 11

    6 vardeclaration: VAR LPAR . varspec SEMICOLON RPAR
    7 varspec: . IDENTIFIER varspec2 type

    IDENTIFIER  shift, and go to state 12

    varspec  go to state 17


state 12

    7 varspec: IDENTIFIER . varspec2 type
    8 varspec2: . varspec2 COMMA IDENTIFIER
    9         | .

    $default  reduce using rule 9 (varspec2)

    varspec2  go to state 18


state 13

    5 vardeclaration: VAR varspec .

    $default  reduce using rule 5 (vardeclaration)


state 14

   14 funcdeclaration: FUNC IDENTIFIER . LPAR parameters RPAR type funcbody
   15                | FUNC IDENTIFIER . LPAR parameters RPAR funcbody

    LPAR  shift, and go to state 19


state 15

    2 declarations: declarations vardeclaration SEMICOLON .

    $default  reduce using rule 2 (declarations)


state 16

    3 declarations: declarations funcdeclaration SEMICOLON .

    $default  reduce using rule 3 (declarations)


state 17

    6 vardeclaration: VAR LPAR varspec . SEMICOLON RPAR

    SEMICOLON  shift, and go to state 20


state 18

    7 varspec: IDENTIFIER varspec2 . type
    8 varspec2: varspec2 . COMMA IDENTIFIER
   10 type: . INT
   11     | . FLOAT32
   12     | . BOOL
   13     | . STRING

    COMMA    shift, and go to state 21
    INT      shift, and go to state 22
    FLOAT32  shift, and go to state 23
    BOOL     shift, and go to state 24
    STRING   shift, and go to state 25

    type  go to state 26


state 19

   14 funcdeclaration: FUNC IDENTIFIER LPAR . parameters RPAR type funcbody
   15                | FUNC IDENTIFIER LPAR . parameters RPAR funcbody
   16 parameters: . IDENTIFIER type parameters2
   17           | .  [RPAR]

    IDENTIFIER  shift, and go to state 27

    $default  reduce using rule 17 (parameters)

    parameters  go to state 28


state 20

    6 vardeclaration: VAR LPAR varspec SEMICOLON . RPAR

    RPAR  shift, and go to state 29


state 21

    8 varspec2: varspec2 COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 30


state 22

   10 type: INT .

    $default  reduce using rule 10 (type)


state 23

   11 type: FLOAT32 .

    $default  reduce using rule 11 (type)


state 24

   12 type: BOOL .

    $default  reduce using rule 12 (type)


state 25

   13 type: STRING .

    $default  reduce using rule 13 (type)


state 26

    7 varspec: IDENTIFIER varspec2 type .

    $default  reduce using rule 7 (varspec)


state 27

   10 type: . INT
   11     | . FLOAT32
   12     | . BOOL
   13     | . STRING
   16 parameters: IDENTIFIER . type parameters2

    INT      shift, and go to state 22
    FLOAT32  shift, and go to state 23
    BOOL     shift, and go to state 24
    STRING   shift, and go to state 25

    type  go to state 31


state 28

   14 funcdeclaration: FUNC IDENTIFIER LPAR parameters . RPAR type funcbody
   15                | FUNC IDENTIFIER LPAR parameters . RPAR funcbody

    RPAR  shift, and go to state 32


state 29

    6 vardeclaration: VAR LPAR varspec SEMICOLON RPAR .

    $default  reduce using rule 6 (vardeclaration)


state 30

    8 varspec2: varspec2 COMMA IDENTIFIER .

    $default  reduce using rule 8 (varspec2)


state 31

   16 parameters: IDENTIFIER type . parameters2
   18 parameters2: . parameters2 COMMA IDENTIFIER type
   19            | .

    $default  reduce using rule 19 (parameters2)

    parameters2  go to state 33


state 32

   10 type: . INT
   11     | . FLOAT32
   12     | . BOOL
   13     | . STRING
   14 funcdeclaration: FUNC IDENTIFIER LPAR parameters RPAR . type funcbody
   15                | FUNC IDENTIFIER LPAR parameters RPAR . funcbody
   20 funcbody: . LBRACE varsandstatements RBRACE

    LBRACE   shift, and go to state 34
    INT      shift, and go to state 22
    FLOAT32  shift, and go to state 23
    BOOL     shift, and go to state 24
    STRING   shift, and go to state 25

    type      go to state 35
    funcbody  go to state 36


state 33

   16 parameters: IDENTIFIER type parameters2 .  [RPAR]
   18 parameters2: parameters2 . COMMA IDENTIFIER type

    COMMA  shift, and go to state 37

    $default  reduce using rule 16 (parameters)


state 34

   20 funcbody: LBRACE . varsandstatements RBRACE
   21 varsandstatements: . varsandstatements SEMICOLON
   22                  | . varsandstatements vardeclaration SEMICOLON
   23                  | . varsandstatements statement SEMICOLON
   24                  | .

    $default  reduce using rule 24 (varsandstatements)

    varsandstatements  go to state 38


state 35

   14 funcdeclaration: FUNC IDENTIFIER LPAR parameters RPAR type . funcbody
   20 funcbody: . LBRACE varsandstatements RBRACE

    LBRACE  shift, and go to state 34

    funcbody  go to state 39


state 36

   15 funcdeclaration: FUNC IDENTIFIER LPAR parameters RPAR funcbody .

    $default  reduce using rule 15 (funcdeclaration)


state 37

   18 parameters2: parameters2 COMMA . IDENTIFIER type

    IDENTIFIER  shift, and go to state 40


state 38

    5 vardeclaration: . VAR varspec
    6               | . VAR LPAR varspec SEMICOLON RPAR
   20 funcbody: LBRACE varsandstatements . RBRACE
   21 varsandstatements: varsandstatements . SEMICOLON
   22                  | varsandstatements . vardeclaration SEMICOLON
   23                  | varsandstatements . statement SEMICOLON
   25 statement: . IDENTIFIER ASSIGN expr
   26          | . LBRACE statement2 RBRACE
   27          | . IF expr LBRACE statement2 RBRACE ELSE LBRACE statement2 RBRACE
   28          | . IF expr LBRACE statement2 RBRACE
   29          | . FOR expr LBRACE statement2 RBRACE
   30          | . FOR LBRACE statement2 RBRACE
   31          | . RETURN expr
   32          | . RETURN
   33          | . funcinvocation
   34          | . parseargs
   35          | . PRINT LPAR expr RPAR
   36          | . PRINT LPAR STRLIT RPAR
   37          | . error
   40 parseargs: . IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ expr RSQ RPAR
   41          | . IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR
   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR

    error       shift, and go to state 41
    SEMICOLON   shift, and go to state 42
    LBRACE      shift, and go to state 43
    RBRACE      shift, and go to state 44
    RETURN      shift, and go to state 45
    FOR         shift, and go to state 46
    IF          shift, and go to state 47
    VAR         shift, and go to state 7
    PRINT       shift, and go to state 48
    IDENTIFIER  shift, and go to state 49

    vardeclaration  go to state 50
    statement       go to state 51
    parseargs       go to state 52
    funcinvocation  go to state 53


state 39

   14 funcdeclaration: FUNC IDENTIFIER LPAR parameters RPAR type funcbody .

    $default  reduce using rule 14 (funcdeclaration)


state 40

   10 type: . INT
   11     | . FLOAT32
   12     | . BOOL
   13     | . STRING
   18 parameters2: parameters2 COMMA IDENTIFIER . type

    INT      shift, and go to state 22
    FLOAT32  shift, and go to state 23
    BOOL     shift, and go to state 24
    STRING   shift, and go to state 25

    type  go to state 54


state 41

   37 statement: error .

    $default  reduce using rule 37 (statement)


state 42

   21 varsandstatements: varsandstatements SEMICOLON .

    $default  reduce using rule 21 (varsandstatements)


state 43

   26 statement: LBRACE . statement2 RBRACE
   38 statement2: . statement2 statement SEMICOLON
   39           | .

    $default  reduce using rule 39 (statement2)

    statement2  go to state 55


state 44

   20 funcbody: LBRACE varsandstatements RBRACE .

    $default  reduce using rule 20 (funcbody)


state 45

   31 statement: RETURN . expr
   32          | RETURN .  [SEMICOLON]
   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR
   47 expr: . expr OR expr
   48     | . expr AND expr
   49     | . expr LT expr
   50     | . expr GT expr
   51     | . expr EQ expr
   52     | . expr NE expr
   53     | . expr LE expr
   54     | . expr GE expr
   55     | . expr PLUS expr
   56     | . expr MINUS expr
   57     | . expr STAR expr
   58     | . expr DIV expr
   59     | . expr MOD expr
   60     | . NOT expr
   61     | . MINUS expr
   62     | . PLUS expr
   63     | . NATURAL
   64     | . DECIMAL
   65     | . IDENTIFIER
   66     | . funcinvocation
   67     | . LPAR expr RPAR
   68     | . LPAR error RPAR

    MINUS       shift, and go to state 56
    PLUS        shift, and go to state 57
    LPAR        shift, and go to state 58
    NOT         shift, and go to state 59
    IDENTIFIER  shift, and go to state 60
    NATURAL     shift, and go to state 61
    DECIMAL     shift, and go to state 62

    $default  reduce using rule 32 (statement)

    funcinvocation  go to state 63
    expr            go to state 64


state 46

   29 statement: FOR . expr LBRACE statement2 RBRACE
   30          | FOR . LBRACE statement2 RBRACE
   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR
   47 expr: . expr OR expr
   48     | . expr AND expr
   49     | . expr LT expr
   50     | . expr GT expr
   51     | . expr EQ expr
   52     | . expr NE expr
   53     | . expr LE expr
   54     | . expr GE expr
   55     | . expr PLUS expr
   56     | . expr MINUS expr
   57     | . expr STAR expr
   58     | . expr DIV expr
   59     | . expr MOD expr
   60     | . NOT expr
   61     | . MINUS expr
   62     | . PLUS expr
   63     | . NATURAL
   64     | . DECIMAL
   65     | . IDENTIFIER
   66     | . funcinvocation
   67     | . LPAR expr RPAR
   68     | . LPAR error RPAR

    MINUS       shift, and go to state 56
    PLUS        shift, and go to state 57
    LBRACE      shift, and go to state 65
    LPAR        shift, and go to state 58
    NOT         shift, and go to state 59
    IDENTIFIER  shift, and go to state 60
    NATURAL     shift, and go to state 61
    DECIMAL     shift, and go to state 62

    funcinvocation  go to state 63
    expr            go to state 66


state 47

   27 statement: IF . expr LBRACE statement2 RBRACE ELSE LBRACE statement2 RBRACE
   28          | IF . expr LBRACE statement2 RBRACE
   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR
   47 expr: . expr OR expr
   48     | . expr AND expr
   49     | . expr LT expr
   50     | . expr GT expr
   51     | . expr EQ expr
   52     | . expr NE expr
   53     | . expr LE expr
   54     | . expr GE expr
   55     | . expr PLUS expr
   56     | . expr MINUS expr
   57     | . expr STAR expr
   58     | . expr DIV expr
   59     | . expr MOD expr
   60     | . NOT expr
   61     | . MINUS expr
   62     | . PLUS expr
   63     | . NATURAL
   64     | . DECIMAL
   65     | . IDENTIFIER
   66     | . funcinvocation
   67     | . LPAR expr RPAR
   68     | . LPAR error RPAR

    MINUS       shift, and go to state 56
    PLUS        shift, and go to state 57
    LPAR        shift, and go to state 58
    NOT         shift, and go to state 59
    IDENTIFIER  shift, and go to state 60
    NATURAL     shift, and go to state 61
    DECIMAL     shift, and go to state 62

    funcinvocation  go to state 63
    expr            go to state 67


state 48

   35 statement: PRINT . LPAR expr RPAR
   36          | PRINT . LPAR STRLIT RPAR

    LPAR  shift, and go to state 68


state 49

   25 statement: IDENTIFIER . ASSIGN expr
   40 parseargs: IDENTIFIER . COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ expr RSQ RPAR
   41          | IDENTIFIER . COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR
   42 funcinvocation: IDENTIFIER . LPAR expr funcinvocation2 RPAR
   43               | IDENTIFIER . LPAR RPAR
   44               | IDENTIFIER . LPAR error RPAR

    COMMA   shift, and go to state 69
    ASSIGN  shift, and go to state 70
    LPAR    shift, and go to state 71


state 50

   22 varsandstatements: varsandstatements vardeclaration . SEMICOLON

    SEMICOLON  shift, and go to state 72


state 51

   23 varsandstatements: varsandstatements statement . SEMICOLON

    SEMICOLON  shift, and go to state 73


state 52

   34 statement: parseargs .

    $default  reduce using rule 34 (statement)


state 53

   33 statement: funcinvocation .

    $default  reduce using rule 33 (statement)


state 54

   18 parameters2: parameters2 COMMA IDENTIFIER type .

    $default  reduce using rule 18 (parameters2)


state 55

   25 statement: . IDENTIFIER ASSIGN expr
   26          | . LBRACE statement2 RBRACE
   26          | LBRACE statement2 . RBRACE
   27          | . IF expr LBRACE statement2 RBRACE ELSE LBRACE statement2 RBRACE
   28          | . IF expr LBRACE statement2 RBRACE
   29          | . FOR expr LBRACE statement2 RBRACE
   30          | . FOR LBRACE statement2 RBRACE
   31          | . RETURN expr
   32          | . RETURN
   33          | . funcinvocation
   34          | . parseargs
   35          | . PRINT LPAR expr RPAR
   36          | . PRINT LPAR STRLIT RPAR
   37          | . error
   38 statement2: statement2 . statement SEMICOLON
   40 parseargs: . IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ expr RSQ RPAR
   41          | . IDENTIFIER COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR
   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR

    error       shift, and go to state 41
    LBRACE      shift, and go to state 43
    RBRACE      shift, and go to state 74
    RETURN      shift, and go to state 45
    FOR         shift, and go to state 46
    IF          shift, and go to state 47
    PRINT       shift, and go to state 48
    IDENTIFIER  shift, and go to state 49

    statement       go to state 75
    parseargs       go to state 52
    funcinvocation  go to state 53


state 56

   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR
   47 expr: . expr OR expr
   48     | . expr AND expr
   49     | . expr LT expr
   50     | . expr GT expr
   51     | . expr EQ expr
   52     | . expr NE expr
   53     | . expr LE expr
   54     | . expr GE expr
   55     | . expr PLUS expr
   56     | . expr MINUS expr
   57     | . expr STAR expr
   58     | . expr DIV expr
   59     | . expr MOD expr
   60     | . NOT expr
   61     | . MINUS expr
   61     | MINUS . expr
   62     | . PLUS expr
   63     | . NATURAL
   64     | . DECIMAL
   65     | . IDENTIFIER
   66     | . funcinvocation
   67     | . LPAR expr RPAR
   68     | . LPAR error RPAR

    MINUS       shift, and go to state 56
    PLUS        shift, and go to state 57
    LPAR        shift, and go to state 58
    NOT         shift, and go to state 59
    IDENTIFIER  shift, and go to state 60
    NATURAL     shift, and go to state 61
    DECIMAL     shift, and go to state 62

    funcinvocation  go to state 63
    expr            go to state 76


state 57

   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR
   47 expr: . expr OR expr
   48     | . expr AND expr
   49     | . expr LT expr
   50     | . expr GT expr
   51     | . expr EQ expr
   52     | . expr NE expr
   53     | . expr LE expr
   54     | . expr GE expr
   55     | . expr PLUS expr
   56     | . expr MINUS expr
   57     | . expr STAR expr
   58     | . expr DIV expr
   59     | . expr MOD expr
   60     | . NOT expr
   61     | . MINUS expr
   62     | . PLUS expr
   62     | PLUS . expr
   63     | . NATURAL
   64     | . DECIMAL
   65     | . IDENTIFIER
   66     | . funcinvocation
   67     | . LPAR expr RPAR
   68     | . LPAR error RPAR

    MINUS       shift, and go to state 56
    PLUS        shift, and go to state 57
    LPAR        shift, and go to state 58
    NOT         shift, and go to state 59
    IDENTIFIER  shift, and go to state 60
    NATURAL     shift, and go to state 61
    DECIMAL     shift, and go to state 62

    funcinvocation  go to state 63
    expr            go to state 77


state 58

   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR
   47 expr: . expr OR expr
   48     | . expr AND expr
   49     | . expr LT expr
   50     | . expr GT expr
   51     | . expr EQ expr
   52     | . expr NE expr
   53     | . expr LE expr
   54     | . expr GE expr
   55     | . expr PLUS expr
   56     | . expr MINUS expr
   57     | . expr STAR expr
   58     | . expr DIV expr
   59     | . expr MOD expr
   60     | . NOT expr
   61     | . MINUS expr
   62     | . PLUS expr
   63     | . NATURAL
   64     | . DECIMAL
   65     | . IDENTIFIER
   66     | . funcinvocation
   67     | . LPAR expr RPAR
   67     | LPAR . expr RPAR
   68     | . LPAR error RPAR
   68     | LPAR . error RPAR

    error       shift, and go to state 78
    MINUS       shift, and go to state 56
    PLUS        shift, and go to state 57
    LPAR        shift, and go to state 58
    NOT         shift, and go to state 59
    IDENTIFIER  shift, and go to state 60
    NATURAL     shift, and go to state 61
    DECIMAL     shift, and go to state 62

    funcinvocation  go to state 63
    expr            go to state 79


state 59

   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR
   47 expr: . expr OR expr
   48     | . expr AND expr
   49     | . expr LT expr
   50     | . expr GT expr
   51     | . expr EQ expr
   52     | . expr NE expr
   53     | . expr LE expr
   54     | . expr GE expr
   55     | . expr PLUS expr
   56     | . expr MINUS expr
   57     | . expr STAR expr
   58     | . expr DIV expr
   59     | . expr MOD expr
   60     | . NOT expr
   60     | NOT . expr
   61     | . MINUS expr
   62     | . PLUS expr
   63     | . NATURAL
   64     | . DECIMAL
   65     | . IDENTIFIER
   66     | . funcinvocation
   67     | . LPAR expr RPAR
   68     | . LPAR error RPAR

    MINUS       shift, and go to state 56
    PLUS        shift, and go to state 57
    LPAR        shift, and go to state 58
    NOT         shift, and go to state 59
    IDENTIFIER  shift, and go to state 60
    NATURAL     shift, and go to state 61
    DECIMAL     shift, and go to state 62

    funcinvocation  go to state 63
    expr            go to state 80


state 60

   42 funcinvocation: IDENTIFIER . LPAR expr funcinvocation2 RPAR
   43               | IDENTIFIER . LPAR RPAR
   44               | IDENTIFIER . LPAR error RPAR
   65 expr: IDENTIFIER .  [SEMICOLON, COMMA, STAR, DIV, MINUS, PLUS, EQ, GE, GT, LBRACE, LE, LT, MOD, NE, AND, OR, RPAR, RSQ]

    LPAR  shift, and go to state 71

    $default  reduce using rule 65 (expr)


state 61

   63 expr: NATURAL .

    $default  reduce using rule 63 (expr)


state 62

   64 expr: DECIMAL .

    $default  reduce using rule 64 (expr)


state 63

   66 expr: funcinvocation .

    $default  reduce using rule 66 (expr)


state 64

   31 statement: RETURN expr .  [SEMICOLON]
   47 expr: expr . OR expr
   48     | expr . AND expr
   49     | expr . LT expr
   50     | expr . GT expr
   51     | expr . EQ expr
   52     | expr . NE expr
   53     | expr . LE expr
   54     | expr . GE expr
   55     | expr . PLUS expr
   56     | expr . MINUS expr
   57     | expr . STAR expr
   58     | expr . DIV expr
   59     | expr . MOD expr

    STAR   shift, and go to state 81
    DIV    shift, and go to state 82
    MINUS  shift, and go to state 83
    PLUS   shift, and go to state 84
    EQ     shift, and go to state 85
    GE     shift, and go to state 86
    GT     shift, and go to state 87
    LE     shift, and go to state 88
    LT     shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    AND    shift, and go to state 92
    OR     shift, and go to state 93

    $default  reduce using rule 31 (statement)


state 65

   30 statement: FOR LBRACE . statement2 RBRACE
   38 statement2: . statement2 statement SEMICOLON
   39           | .

    $default  reduce using rule 39 (statement2)

    statement2  go to state 94


state 66

   29 statement: FOR expr . LBRACE statement2 RBRACE
   47 expr: expr . OR expr
   48     | expr . AND expr
   49     | expr . LT expr
   50     | expr . GT expr
   51     | expr . EQ expr
   52     | expr . NE expr
   53     | expr . LE expr
   54     | expr . GE expr
   55     | expr . PLUS expr
   56     | expr . MINUS expr
   57     | expr . STAR expr
   58     | expr . DIV expr
   59     | expr . MOD expr

    STAR    shift, and go to state 81
    DIV     shift, and go to state 82
    MINUS   shift, and go to state 83
    PLUS    shift, and go to state 84
    EQ      shift, and go to state 85
    GE      shift, and go to state 86
    GT      shift, and go to state 87
    LBRACE  shift, and go to state 95
    LE      shift, and go to state 88
    LT      shift, and go to state 89
    MOD     shift, and go to state 90
    NE      shift, and go to state 91
    AND     shift, and go to state 92
    OR      shift, and go to state 93


state 67

   27 statement: IF expr . LBRACE statement2 RBRACE ELSE LBRACE statement2 RBRACE
   28          | IF expr . LBRACE statement2 RBRACE
   47 expr: expr . OR expr
   48     | expr . AND expr
   49     | expr . LT expr
   50     | expr . GT expr
   51     | expr . EQ expr
   52     | expr . NE expr
   53     | expr . LE expr
   54     | expr . GE expr
   55     | expr . PLUS expr
   56     | expr . MINUS expr
   57     | expr . STAR expr
   58     | expr . DIV expr
   59     | expr . MOD expr

    STAR    shift, and go to state 81
    DIV     shift, and go to state 82
    MINUS   shift, and go to state 83
    PLUS    shift, and go to state 84
    EQ      shift, and go to state 85
    GE      shift, and go to state 86
    GT      shift, and go to state 87
    LBRACE  shift, and go to state 96
    LE      shift, and go to state 88
    LT      shift, and go to state 89
    MOD     shift, and go to state 90
    NE      shift, and go to state 91
    AND     shift, and go to state 92
    OR      shift, and go to state 93


state 68

   35 statement: PRINT LPAR . expr RPAR
   36          | PRINT LPAR . STRLIT RPAR
   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR
   47 expr: . expr OR expr
   48     | . expr AND expr
   49     | . expr LT expr
   50     | . expr GT expr
   51     | . expr EQ expr
   52     | . expr NE expr
   53     | . expr LE expr
   54     | . expr GE expr
   55     | . expr PLUS expr
   56     | . expr MINUS expr
   57     | . expr STAR expr
   58     | . expr DIV expr
   59     | . expr MOD expr
   60     | . NOT expr
   61     | . MINUS expr
   62     | . PLUS expr
   63     | . NATURAL
   64     | . DECIMAL
   65     | . IDENTIFIER
   66     | . funcinvocation
   67     | . LPAR expr RPAR
   68     | . LPAR error RPAR

    MINUS       shift, and go to state 56
    PLUS        shift, and go to state 57
    LPAR        shift, and go to state 58
    NOT         shift, and go to state 59
    IDENTIFIER  shift, and go to state 60
    NATURAL     shift, and go to state 61
    DECIMAL     shift, and go to state 62
    STRLIT      shift, and go to state 97

    funcinvocation  go to state 63
    expr            go to state 98


state 69

   40 parseargs: IDENTIFIER COMMA . BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ expr RSQ RPAR
   41          | IDENTIFIER COMMA . BLANKID ASSIGN PARSEINT LPAR error RPAR

    BLANKID  shift, and go to state 99


state 70

   25 statement: IDENTIFIER ASSIGN . expr
   42 funcinvocation: . IDENTIFIER LPAR expr funcinvocation2 RPAR
   43               | . IDENTIFIER LPAR RPAR
   44               | . IDENTIFIER LPAR error RPAR
   47 expr: . expr OR expr
   48     | . expr AND expr
   49     | . expr LT expr
   50     | . expr GT expr
   51     | . expr EQ expr
   52     | . expr NE expr
   53     | . expr LE expr
   54     | . expr GE expr
   55     | . expr PLUS expr
   56     | . expr MINUS expr
   57     | . expr STAR expr
   58     | . expr DIV expr
   59     | . expr MOD expr
   60     | . NOT expr
   61     | . MINUS expr
   62     | . PLUS expr
   63     | . NATURAL
   64     | . DECIMAL
   65     | . IDENTIFIER
   66     | . funcinvocation
   67     | . LPAR expr RPAR
   68     | . LPAR error RPAR
